# chess

./: CMakeLists.txt  svg_support.bat  svg_support.sh
src/: Board.cpp  Board.h  Chess.cpp  Chess.h  Move.h  Piece.h  TextureManager.cpp  TextureManager.h  main.cpp
